<resources>
    <string name="title_main">Bienvenido</string>
    <string name="sub_title_main">¡Sube tu juego!</string>
    <string name="all">TODO</string>
    <string name="name">Ori and the Will of the Wisps</string>
    <string name="date">12/12/2022</string>
    <string name="price">40 €</string>
    <string name="description">Ori and the Will of the Wisps es un videojuego del género aventura-plataforma y Metroidvania desarrollado por Moon Studios y publicado por Xbox Game Studios para Microsoft Windows, Xbox One y Nintendo Switch. Es una continuación del título de 2015 Ori and the Blind Forest y fue anunciado durante el E3 2017.</string>
    <string name="name_form">Nombre</string>
    <string name="date_form">WhatsApp</string>
    <string name="price_form">Precio</string>
    <string name="action_form">Guardar</string>
    <string name="description_form">Descripción</string>
    <string name="enviarmensaje">Email del anunciante</string>
    <string name="precio">Ej.: 25€</string>
    <string name="descripcionCorreo">Ej.: Buenos días, me llamo Ejemplo y estoy interesado en comprar o intercambiar su videojuego. Gracias de antemano y un saludo.</string>
    <string name="reglas">VER REGLAS Y MODOS DE USO</string>
    <string name="asunto">Ej.: Interesado/a en Videojuego Ejemplo</string>
    <string name="enviar">Enviar Email</string>
    <string name="app_name">GSwap</string>
    <string name="loginButton">Acceder</string>
    <string name="signUpButton">Registrarse</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="email_contacto">Email de contacto</string>
    <string name="Google">Acceder con Google</string>
    <string name="logOutButton">Cerrar Sesión</string>
    <string name="volverRegistroBtn">Ya tienes cuenta? volver</string>
    <string name="prefs_file">com.gec.gamestore.PREFERENCE_FILE_KEY</string>
    <string name="anuncio1">Subir mi Videojuego</string>
    <string name="buscarAnunciosButton">Buscar videojuegos</string>
    <string name="emailHome">Email</string>
    <string name="proveedorHome">Proveedor</string>
    <string name="cuentaBtn">Eres nuevo? Registrate aquí</string>
    <string name="campoTitulo">Título del videojuego</string>
    <string name="contrasenaOlvidadaBtn">Olvidaste tu contraseña?</string>
    <string name="recuperarBtn">Recuperar contraseña</string>
    <string name="volverLogin">Ya recuerdas tu contraseña? volver</string>
    <string name="misVideojuegosTextView">Subir mi videojuego</string>
    <string name="buscarTextView">Buscar Videojuegos</string>
    <string name="cerrarSesionBtn">Cerrar sesión</string>
    <string name="miPerfilTextView">Mi perfil</string>
    <string name="BuscarPerfilBtn">Buscar</string>
    <string name="CampoTelefonoGame">Teléfono</string>
    <string name="CampoMailGame">Mail de contacto</string>
    <string name="completarInformacion">Manten actualizada tu información personal</string>
    <string name="mailValido">Introduce un mail válido y una contraseña segura</string>
    <string name="usuario">Usuario</string>
</resources>