<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button_rounded_border_splash"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/authLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:color="#322F2F"
        android:textAlignment="textStart"
        tools:context=".logIn.AuthActivity">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#CCA950"
            android:text="@string/loginButton"
            android:textColor="#000000"
            android:textSize="14sp"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
            tools:ignore="TextContrastCheck"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/fullnameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/button_rounded_border_fields"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/Email"
            android:inputType="textWebEmailAddress|textEmailSubject"
            android:minHeight="48dp"
            android:textColor="#FFEB3B"
            android:textColorHighlight="#FFEB3B"
            android:textColorHint="#FFEB3B"
            android:textColorLink="#FFEB3B"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="password"
            android:background="@drawable/button_rounded_border_fields"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/Password"
            android:inputType="textPersonName|textWebPassword"
            android:minHeight="48dp"
            android:textColor="#FFEB3B"
            android:textColorHighlight="#FFEB3B"
            android:textColorHint="#FFEB3B"
            android:textColorLink="#FFEB3B"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullnameEditText"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/googleButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#39AE96"
            android:text="@string/Google"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/cuentaBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cuentaBtn"
            android:textColor="#FFEB3B"
            android:textColorHighlight="#FFEB3B"
            android:textColorHint="#FFEB3B"
            android:textColorLink="#FFEB3B"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/googleButton" />

        <TextView
            android:id="@+id/contrasenaOlvidadaBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="10dp"
            android:text="@string/contrasenaOlvidadaBtn"
            android:textColor="#FFEB3B"
            android:textColorHighlight="#FFEB3B"
            android:textColorHint="#FFEB3B"
            android:textColorLink="#FFEB3B"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>