<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">


    <View
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="@color/plum_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="120dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/campoTitulo"
                android:textColor="@color/black_500" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/nameTextView"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:autofillHints="@string/name_form"
                android:background="@drawable/ic_field"
                android:ems="80"
                android:hint="@string/campoTitulo"
                android:inputType="textAutoComplete"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:textColor="#A1000000"
                android:textColorHighlight="#A1000000"
                android:textColorHint="#5B000000"
                android:textColorLink="#A1000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/priceTextView"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameEditText"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/price_form"
                android:textColor="@color/black_500" />

            <EditText
                android:id="@+id/priceEditText"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:layout_below="@+id/dateTextView"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:autofillHints="@string/date_form"
                android:background="@drawable/ic_field"
                android:ems="3"
                android:hint="@string/precio"
                android:inputType="date|text"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:textColor="#A1000000"
                android:textColorHighlight="#A1000000"
                android:textColorHint="#5B000000"
                android:textColorLink="#A1000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameEditText"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@+id/priceEditText"
                android:text="@string/Email"
                android:textColor="@color/black_500" />

            <EditText
                android:id="@+id/dateEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/dateTextView"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@+id/priceTextView"
                android:autofillHints=""
                android:background="@drawable/ic_field"
                android:ems="10"
                android:hint="@string/email_contacto"
                android:inputType="textUri|text|datetime"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:textColor="#A1000000"
                android:textColorHighlight="#A1000000"
                android:textColorHint="#5B000000"
                android:textColorLink="#A1000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/priceEditText"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/description_form"
                android:textColor="@color/black_500" />

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/descriptionTextView"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="17dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="16dp"
                android:autofillHints="@string/description_form"
                android:background="@drawable/ic_field"
                android:ems="255"
                android:gravity="clip_vertical"
                android:hint="@string/description_form"
                android:inputType="textMultiLine"
                android:lines="6"
                android:maxLines="12"
                android:minLines="6"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:textColor="#A1000000"
                android:textColorHighlight="#A1000000"
                android:textColorHint="#5B000000"
                android:textColorLink="#A1000000"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/saveButton"
                android:layout_width="160dp"
                android:layout_height="48dp"
                android:layout_below="@+id/descriptionEditText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/ic_btn"
                android:gravity="center"
                android:text="@string/action_form"
                android:textColor="@color/white"/>

            <com.google.android.gms.ads.AdView
                android:id="@+id/banner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginStart="45dp"
                android:layout_below="@+id/saveButton"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-1853507212613750/7689117909"
                ads:layout_constraintTop_toTopOf="parent"
                ads:layout_constraintBottom_toBottomOf="parent"
                ads:layout_constraintEnd_toEndOf="parent"
                ads:layout_constraintStart_toStartOf="parent" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/posterImageView"
            android:layout_width="130dp"
            android:layout_height="182dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_picture"
            android:contentDescription="@string/all" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
